# ai-data-analyst

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
Video Guide/: YOUTUBE_01_HOOK_INTRO.md  YOUTUBE_02_PROBLEM_OPPORTUNITY.md  YOUTUBE_03_AGENT_FUNDAMENTALS.md  YOUTUBE_04_ARCHITECTURE.md  YOUTUBE_05_BUILDING_LIVE.md  YOUTUBE_06_DEMO_RESULTS.md  YOUTUBE_07_EXTENDING_SCALE.md  YOUTUBE_08_MISTAKES_TIPS.md  YOUTUBE_09_CLOSEOUT_CTA.md  YOUTUBE_COMPLETE_PACKAGE.md  YOUTUBE_PRODUCTION_GUIDE.md  YOUTUBE_SCRIPT_PLAN.md
app/: main.py
app/agent/: __init__.py  agent.py  parser.py  prompt.py
app/core/: config.py  logger.py
app/memory/: __init__.py  buffer.py
app/models/: __init__.py  base.py  factory.py  groq_client.py  llm.py  openai_client.py
app/schemas/: agent_schema.py
app/tools/: __init__.py  data_manager.py  file_tool.py  python_executor.py
app/utils/: helpers.py
data/: sample.csv
scripts/: run_agent.sh
tests/: test_agent.py  test_tool.py
